--- a/Main.tex
+++ b/Main.tex
@@ -31,7 +31,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%   			Liste des fichiers à compiler					%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	\includeonly{Chapitre1,Chapitre2,Chapitre3,Chapitre4,Chapitre5,Annexes}
+	\includeonly{Chapitre1,Chapitre2,Chapitre3,Chapitre4,Chapitre5,Chapitre6,Annexes}
  
 
 
@@ -86,7 +86,7 @@
 	\includefrom{rep_Chapitre3/}{Chapitre3}	
 	\includefrom{rep_Chapitre4/}{Chapitre4}
 	\includefrom{rep_Chapitre5/}{Chapitre5}	
-	
+	\includefrom{rep_Chapitre6/}{Chapitre6}	
 	
 	% Annexes
 	\begin{appendix}
