--- a/Preambule.tex
+++ b/Preambule.tex
@@ -28,6 +28,8 @@
 %% Faux texte, juste pour la démo
 \usepackage{blindtext}
 \usepackage{listings}
+\usepackage{array}
+\usepackage{tabularx}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
