--- a/Chapitre6.tex
+++ b/Chapitre6.tex
@@ -147,6 +147,7 @@ leur usage afin de ne pas induire une baisse trop importante du signal de perfus
 %%%
 %%%
 \subsection{Effets de volume partiel}
+\label{sec:volpar}
 Les acquisitions rapides se font au détriment de la résolution. Ainsi les voxels ne sont que
 rarement constitués d’un seul tissu. Un voxel typique contient plutôt un mélange de matière grise,
 blanche et liquide céphalo rachidien en proportions variables. Or en termes de magnétisation, la
